--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@ body {
 
 .headerStyle {
   box-shadow: 0px 2px 18px rgba(179, 183, 186, 0.57);
-  padding-top: 18px;
   background: #fff; }
   .headerStyle .textAlignEnd {
     text-align: right;
@@ -17,10 +16,7 @@ body {
     background: #fff; }
 
 .header-icon {
-  background: linear-gradient(274.57deg, #F66691 1.13%, #FC9968 74.54%, #FFBA69 102.21%);
-  color: #fff;
-  padding: 6px;
-  border-radius: 4px; }
+  margin: 20px 32px 20px 52px; }
 
 .icon {
   color: #FFA368; }
@@ -29,7 +25,7 @@ body {
   padding: 0 !important; }
 
 .main-grid {
-  padding: 32px 190px 18px 114px;
+  padding: 32px 114px 18px 114px;
   background: #fff;
   box-shadow: 0px 2px 18px rgba(179, 183, 186, 0.57);
   border-radius: 4px; }
@@ -40,8 +36,30 @@ body {
 .form-main-grid {
   margin: 32px 101px 88px; }
 
+.center-text {
+  text-align: center; }
+
 .input_divider {
-  margin: 32px 0; }
+  margin: 32px 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #4A5464; }
+
+.radio-button {
+  margin-right: 32px;
+  text-align: center; }
+
+.radio-grid {
+  display: flex;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: normal;
+  text-align: center; }
 
 .borderinput {
   border: 0px;
@@ -49,7 +67,8 @@ body {
   border-radius: 4px 4px 0px 0px;
   background: #fbfbfb;
   padding: 8px 6.43px 8px 22.14px;
-  font-size: 14px !important; }
+  font-size: 14px !important;
+  max-width: 1164px; }
 
 .btn-right-bottom {
   font-size: 0.75rem;
@@ -74,6 +93,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; }
+
+.top-content {
+  display: flex;
+  justify-content: center;
+  align-items: baseline; }
 
 .center-align {
   display: flex !important;
@@ -174,13 +198,19 @@ input[type="radio"]:checked + label {
 .primaryjob-icon {
   padding-right: 17px; }
 
+@media screen and (max-width: 1200px) {
+  .main-grid {
+    padding: 21px 78px 18px 40px; }
+
+  .form-main-grid {
+    margin: 32px 80px 88px; } }
 @media screen and (max-width: 992px) {
   .form-main-grid {
     margin-left: 6px;
     margin-right: 6px; }
 
   .main-grid {
-    padding: 22px 18px 18px 18px; }
+    padding: 22px 262px 18px 72px; }
 
   .avator {
     margin-right: 23px; }
@@ -195,7 +225,7 @@ input[type="radio"]:checked + label {
     font-size: 1rem; }
 
   .main-grid {
-    padding: 22px 18px 10px 18px; }
+    padding: 22px 20px 10px 16px; }
 
   .small-image {
     width: 30px;
@@ -234,5 +264,8 @@ input[type="radio"]:checked + label {
 @media screen and (min-width: 575px) {
   .invisable-part-bottom {
     margin-top: -125px; } }
+@media screen and (max-width: 772px) {
+  .main-grid {
+    padding: 22px 20px 10px 16px; } }
 
 /*# sourceMappingURL=style.css.map */
