--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ input[type="radio"]:checked + label {
 
 @media screen and (max-width: 1200px) {
   .main-grid {
-    padding: 21px 78px 18px 40px; }
+    padding: 21px 78px 18px 40px !important; }
 
   .form-main-grid {
     margin: 32px 80px 88px; } }
@@ -141,8 +141,11 @@ input[type="radio"]:checked + label {
   .formHeader {
     font-size: 1rem; }
 
+  .right-side {
+    text-align: center; }
+
   .main-grid {
-    padding: 22px 20px 10px 16px; }
+    padding: 22px 20px 10px 16px !important; }
 
   .small-image {
     width: 30px;
